exceptions handler, swagger documentation, forgot password page, improved pagination